# ocppd

./: CMakeLists.txt  README.md  main.cpp
src/: ActionHandler.cpp  ActionHandler.h  ApiClientRepository.cpp  ApiClientRepository.h  ApiRoute.cpp  ApiRoute.h  CallHandler.cpp  CallHandler.h  CallResultHandler.cpp  CallResultHandler.h  ChargePoint.cpp  ChargePoint.h  ChargePointFactory.cpp  ChargePointFactory.h  ChargePointRepository.cpp  ChargePointRepository.h  ConfigurationRepository.cpp  ConfigurationRepository.h  OcppRoute.cpp  OcppRoute.h  Properties.h  ResourceRoute.cpp  ResourceRoute.h  WebSocketConnection.cpp  WebSocketConnection.h
src/ocpp/: CMakeLists.txt  Emitter.cpp  Emitter.h  OcppActionHandler.h  OcppActionType.h  OcppCall.cpp  OcppCall.h  OcppCallHandler.h  OcppCallPayloadKey.h  OcppCallResult.cpp  OcppCallResult.h  OcppCallResultGenerator.cpp  OcppCallResultGenerator.h  OcppCallResultPayloadKey.h  OcppCallResultStatus.h  OcppCallStatus.h  OcppConfFactory.cpp  OcppConfFactory.h  OcppConfHandler.cpp  OcppConfHandler.h  OcppConfParser.cpp  OcppConfParser.h  OcppMessageHandler.cpp  OcppMessageHandler.h  OcppMessageParser.cpp  OcppMessageParser.h  OcppMessageType.h  OcppReqHandler.cpp  OcppReqHandler.h  OcppReqParser.cpp  OcppReqParser.h  OcppService.cpp  OcppService.h  OcppWebSocketService.cpp  OcppWebSocketService.h  WebSocketConnection.cpp  WebSocketConnection.h
src/ocpp/action/: OcppAction.cpp  OcppAction.h  OcppActionBootNotification.cpp  OcppActionBootNotification.h
src/ocpp/calls/: OcppMeterValues.cpp  OcppMeterValues.h
src/ocpp/confs/: OcppConfBase.cpp  OcppConfBase.h  OcppConfField.h  OcppConfStatus.h
src/ocpp/reqs/: BootNotification.cpp  BootNotification.h  ChangeConfiguration.cpp  ChangeConfiguration.h  GetConfiguration.cpp  GetConfiguration.h  MeterValues.cpp  MeterValues.h  OcppReq.h  OcppReqBase.cpp  OcppReqBase.h  StatusNotification.cpp  StatusNotification.h
src/ocpp/types/: ConfigurationKey.h  ConfigurationKeys.h  ConfigurationValue.h  OcppActionCentralSystem.h  OcppActionChargePoint.h  OcppCallPayload.h  OcppCallPayloadKey.h  OcppCallResultPayloadKey.h  OcppCallResultStatus.h  OcppCallStatus.h  OcppChargePointErrorCode.h  OcppChargePointStatus.h  OcppChargingProfile.cpp  OcppChargingProfile.h  OcppConfPayloadKey.h  OcppConfiguration.h  OcppConfigurationKey.h  OcppMeasurand.h  OcppMessage.h  OcppMessageType.h  OcppMeterValue.cpp  OcppMeterValue.h  OcppReqPayload.h  OcppReqPayloadKey.h  OcppReqStatus.h  OcppSampledValue.cpp  OcppSampledValue.h  OcppUpdateStatus.h  UnknownKeys.h
src/ocpp/utils/: chrono.cpp  chrono.h  overload.h
src/utils/: Overload.h  log.h
tests/: CMakeLists.txt  OcppMessageParserTest.cpp
webapp/: CMakeLists.txt  pubspec.yaml
webapp/lib/: main.dart
webapp/lib/controllers/: charge_points_controller.dart  configuration_controller.dart  configurations_controller.dart  navigation_controller.dart
webapp/lib/models/: charge_point.dart  charge_point_status.dart  configuration.dart  ocpp_action.dart  ocpp_charge_point_status.dart  ocpp_configuration_key.dart  ocpp_measurand.dart  property_key.dart
webapp/lib/services/: web_socket_service.dart
webapp/lib/ui/: charge_point_card.dart  charge_points_page.dart  charge_points_page_new.dart  colors.dart  configuration_card.dart  configuration_filter_chips.dart  configuration_group.dart  configuration_item.dart  configuration_page.dart  main_page.dart
